# NNRust

./: Cargo.toml
.cargo/: config.toml
src/: Lag_Dataset.py  config.rs  data.rs  inference.rs  main.rs  model.rs  predict.rs  t  training.rs
txt/: Main.txt  config.rs.txt  data.rs.txt  model.rs.txt
